style.css
body {
    margin: 0;
    max-width: 100vw;
    font-family: 'Lato', sans-serif;
    font-size: 14px;
    line-height: 18px;
    letter-spacing: 0.5px;
    color: #666;
    background-color: #fff;
}

p,h1,h2,h3,h4,h5,h6 {
    margin: 0;
    padding: 0;
}

.app {
    display: flex;
}

/***************   SIDEBAR   ***************/

.sidebar {
    display: flex;
}

/***************   PAGE NAV   ***************/

.page-nav {
    display: flex;
    flex-direction: column;
    height: 100vh;
    min-width: 60px;
    background-color: #42A5F5;
}

/***************   PAGE LOGO   ***************/

.nav_logo {
    margin: 15px 0 25px;
    height: 30px;
    display: flex;
    justify-content: center;
    align-items: center;
}

.nav-logo_text {
    font-family: 'Baloo', cursive;
    font-size: 50px;
    color: #fff;
    text-decoration: none;
}

.nav_list {
    margin: 0;
    padding: 0;
    display: flex;
    flex-direction: column;
    align-items: center;
    list-style: none;
}

.nav_item {
    width: 100%;
}

.nav_burger-menu {
    display: none;
    padding: 0 25px;
    justify-content: center;
    align-items: center;
    font-size: 30px;
    color: #fff;
    background-color: transparent;
    border: 0;
    cursor: pointer;
    outline: 0;
}

.btn-nav {
    padding: 20px 0;
    width: 100%;
    display: flex;
    justify-content: center;
    align-items: center;
    font-family: inherit;
    font-size: 16px;
    text-align: left;
    color: #fff;
    background-color: transparent;
    border: 0;
    cursor: pointer;
    outline: 0;
}

.btn-nav:hover,
.btn-nav:focus {
    color: #42A5F5;
    background-color: #f6f6f6;    
}

.btn-nav_open {
    justify-content: flex-start;
    padding-left: 15px;
}

.btn-nav_text {
    display: none;
    font-size: 14px;
    margin-left: 10px;
}

.nav_about {
    display: none;
    margin: 0 auto;
    padding: 3px;
    color: rgba(250,250,250,0.8);
    cursor: pointer;
}

.nav_about:hover {
    color: #fff;
}

/***************   EXPAND BUTTON   ***************/

.nav_expand {
    margin: 0 auto;
    margin-top: auto;
}

.btn_expand {
    padding: 25px 0;
    width: 100%;
    font-size: 18px;
    color: #fff;
    background-color: transparent;
    border: 0;
    cursor: pointer;
    outline: 0;
    opacity: 0.6;
}

.btn_expand:hover,
.btn_expand:focus {
    opacity: 1;
}

/***************   NAV OPEN   ***************/

.page-nav_open {
    min-width: 130px;
}

/***************   NOTES SEARCH   ***************/

.notes_search {
    position: fixed;
    padding: 15px 0;
    height: 30px;
    width: 300px;
    display: flex;
    align-items: center;
    background-color: #f6f6f6;
}

.search_input {
    display: block;
    padding: 10px 15px;
    margin: 0 auto;
    width: 80%;
    font-family: inherit;
    font-size: 14px;
    color: #888;
    background-color: #fff;
    border: 0;
    border-radius: 10px;
    outline: 0;
}

.search_input::placeholder {
    color: #888;
}

/***************   NOTES LIST   ***************/

.notes {
    width: 300px;
    height: 100vh;
    overflow-y: scroll;
    background-color: #f6f6f6;
}

.notes_list {
    margin: 60px 0 0 0;
    padding: 0;
    list-style: none;
}

.notes_item {
    padding: 15px;
    display: flex;
    color: #666;
    cursor: pointer;
}

.notes_item:hover {
    background-color: #fff;

}

.notes_content {
    padding-left: 10px;
}

.notes_title {
    font-size: 14px;
    line-height: 18px;
    color: #42A5F5;
    margin-bottom: 10px;
}

.notes_text {
    font-size: 14px;
    line-height: 18px;
}

.notes_info {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: flex-end;
    padding-right: 10px;
    font-size: 14px;
    line-height: 18px;
    text-align: right;
    text-transform: uppercase;
    color: #bbb;
    border-right: 1px solid #ccc;
}

.notes-date {
    display: flex;
    flex-direction: column;
    min-width: 30px;
    font-size: 14px;
    line-height: 18px;
    font-weight: 700;
    text-align: right;
    margin-bottom: 10px;
    color: #aaa;
}

.notes_star {
    padding-bottom: 10px;
    font-size: 18px;
}

.notes_star:hover {
    color: #FDD835;
}

.editor_header .notes_star {
    padding: 0;
    font-size: inherit;
    color: #bbb;
    cursor: pointer;
}

.editor_header .notes_star:hover {
    padding: 0;
    font-size: inherit;
    color: #FDD835;
}

.notes_starred {
    content: '\f005';
    font-family: "Font Awesome 5 Free";
    font-weight: 900 !important;
    font-size: 18px;
    color: #FDD835;
}

.notes_empty-msg {
    display: none;
    text-align: center;
    margin: 100px auto 0;
}

/***************   EDITOR   ***************/

.main-content {
    margin: 0 auto;
    width: 50%;
    height: 100vh;
}

.editor {
    height: 80%;
}

/***************   QUILL   ***************/

.ql-toolbar.ql-snow {
    padding: 10px 0 !important;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}

/*.ql-toolbar.ql-snow,*/
.ql-container.ql-snow {
    border-bottom-left-radius: 5px;
    border-bottom-right-radius: 5px;
    /*border: 0 !important;*/
}

.ql-editor {
    padding: 10px 8px !important;
}

.ql-editor p {
    font-family: 'Lato', sans-serif !important;
    margin-bottom: 20px;
    font-size: 16px;
    line-height: 26px;
    letter-spacing: 0.5px;
}

/*Quill text area Placeholder */
.ql-editor.ql-blank::before {
    color: rgba(0, 0, 0, 0.3) !important;
    content: attr(data-placeholder);
    top: 15px !important;
    left: 8px !important;
}

.quill_title-container {
    display: flex;
}

.quill_title {
    flex-grow: 1;
    width: 100%;
    padding: 5px 8px;
    margin: 10px 10px 0 0;
    font-family: 'Lato', sans-serif;
    font-size: 24px;
    letter-spacing: 0.5px;
    color: #42A5F5;
    /*border: 0;*/
    border: 1px solid #ccc;
    border-radius: 5px;
    outline: 0;
}

.quill_title::placeholder {
    color: rgba(0, 0, 0, 0.3);
}

.quill_title:hover,
.quill_title:hover {
    background-color: #f2f2f2;
    outline: 0;
}

.quill_btn-save {
    display: block;
    margin: 10px 0 0;
    padding: 15px 35px;
    font-family: 'Lato', sans-serif;
    font-size: 16px;
    color: #fff;
    background-color: #42A5F5;
    border: 0;
    border-radius: 5px;
    cursor: pointer;
    outline: 0;
}

.quill_btn-save:hover,
.quill_btn-save:focus {
    background-color: #1E88E5;
}

.quill_date {
    display: block;
    margin: 0;
    padding: 10px 0;
    font-size: 12px;
    color: #bbb;
}

.quill_error {
    position: relative;
}

.quill_error:after {
    position: absolute;
    content: 'Enter a title';
}

/***************   POPUP   ***************/

.blur {
    filter: blur(2px);
    -webkit-filter: blur(2px);
    z-index: 0;
}

.popup_wrapper {
    display: block;
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(250,250,250,0.5);
    z-index: 100;
}

.popup {
    position: relative;
    top: 50%;
    transform: translateY(-50%);
    width: 100%;
    max-width: 600px;
    margin: 0 auto;
    padding: 10px;
    text-align: center;
    background-color: #fff;
    border-radius: 5px;
    box-shadow: rgba(0, 0, 0, 0.15) 0px 2px 10px;
    z-index: 1000;
}

.popup_close {
    position: absolute;
    top: 10px;
    right: 15px;
    font-size: 18px;
    cursor: pointer;
}

.popup_close:hover {
    color: #42A5F5;
}

.popup_content {
    padding: 50px 60px;
}

.popup_title {
    margin-bottom: 25px;
    font-family: 'Baloo', cursive;
    font-size: 50px;
    color: #42A5F5;
}

.popup_description {
    margin-bottom: 25px;
    font-size: 20px;
}

.popup_text {
    margin-bottom: 50px;
    font-size: 16px;
    line-height: 24px;
}

.popup_stop {
    text-align: center;
    margin-top: 15px;
}

.popup_start {
    display: block;
    margin: 50px auto 0;
    padding: 10px 25px;
    font-family: inherit;
    font-size: 16px;
    color: #fff;
    background-color: #42A5F5;
    border: 0;
    border-radius: 10px;
    cursor: pointer;
    outline: 0;
}

.popup_start:hover,
.popup_start:focus {
    background-color: #1E88E5;
}

.features_list {
    margin: 0;
    padding: 0;
    list-style: none;
    display: flex;
    justify-content: space-around;
}

.features_item {
    width: 30%;
    margin-right: 1%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.features_item:last-child {
    margin: 0;
}

.features_img {
    margin-bottom: 15px;
}

.features_description {
    font-size: 16px;
    font-weight: 700;
    text-align: center;
}


/***************   OTHER   ***************/

.hidden {
    display: none;
}

.show {
    display: block;
}

/***************   TABLET VIEW   ***************/

@media (max-width: 992px) {
    
    .main-content {
        width: 100%;
        padding: 0 25px;
    }
}

@media (max-width: 780px) {

    .notes {
        display: none;
    }
    
    .main-content {
        width: 100%;
        padding: 0 25px;
    }

    .btn-nav:hover,
    .btn-nav:focus {
        background-color: #fff;
    }
}

/***************   MOBILE VIEW   ***************/

@media (max-width: 576px) {

    .app {
        flex-direction: column;
    }

    .page-nav {
        position: fixed;
        width: 100%;
        height: 60px;
        flex-direction: row;
    }
    
    .main-content {
        width: 100%;
        margin-top: 60px;
        padding: 0 25px;
    }

    .nav_list {
        display: none;
        position: fixed;
        margin-top: 60px;
        width: 100%;
        background-color: #42A5F5;
    }

    .nav-list_show {
        display: flex;
    }

    .btn-nav_text {
        display: block;
        font-size: 16px;
    }

    .toolbar_hide {
        display: none;
    }

    .nav_expand {
        display: none;
    }

    .nav_burger-menu {
        display: flex;
    }

    .nav-logo_text {
        position: fixed;
        left: 50%;
        transform: translateX(-50%);
    }
}

